# vtuber

./: .gitignore  .infisical.json  README.md  check-models.js  package-lock.json  package.json  server.js  test-ffmpeg.js
app/: globals.css  layout.tsx  page.tsx
app/api/chat/: route.ts
app/api/rtmp/start/: route.ts
app/api/stream-key/: route.ts
app/api/test-env/: route.ts
app/overlay/: page.tsx
components/: ChatOverlay.tsx  ControlBar.tsx  DebugSpeech.tsx  StudioLayout.tsx  VideoPreview.tsx
hooks/: useWebSpeech.ts
lib/: rtmp-server.ts
vyuber-rust/: .gitignore  .infisical.json  Cargo.toml  README.md  Trunk.toml  package-lock.json  package.json
vyuber-rust/crates/vyuber-backend/: Cargo.toml  justfile  run-simple.ps1  run-with-env.ps1  run.cmd  run.ps1  setup-cargo-alias.ps1
vyuber-rust/crates/vyuber-backend/src/: config.rs  main.rs  mediamtx.rs
vyuber-rust/crates/vyuber-backend/src/api/: chat.rs  live.rs  mod.rs  stream_key.rs
vyuber-rust/crates/vyuber-backend/src/rtmp/: mod.rs  native.rs  server.rs  transcoder.rs
vyuber-rust/crates/vyuber-backend/src/services/: gemini.rs
vyuber-rust/crates/vyuber-backend/src/streaming/: ffmpeg.rs  mod.rs  state.rs
vyuber-rust/crates/vyuber-backend/static/: index.html  mpegts-wrapper.js  vyuber-frontend-55f583590e93b606_bg.wasm  vyuber-frontend-8d9d0dad41a6726d.js  vyuber-frontend-8d9d0dad41a6726d_bg.wasm  vyuber-frontend-bb8f24c0861d334a.js  vyuber-frontend-bb8f24c0861d334a_bg.wasm  vyuber-frontend-be75886ced5d95be_bg.wasm  vyuber-frontend-c4a5636d64f309d3.js  vyuber-frontend-c4a5636d64f309d3_bg.wasm
vyuber-rust/crates/vyuber-backend/static/snippets/vyuber-frontend-0804aa5fb07b7e29/: inline0.js
vyuber-rust/crates/vyuber-frontend/: Cargo.toml  Trunk.toml  index.html
vyuber-rust/crates/vyuber-frontend/public/: mpegts-wrapper.js  webrtc-player.js
vyuber-rust/crates/vyuber-frontend/src/: lib.rs
vyuber-rust/crates/vyuber-frontend/src/services/: chat_api.rs  mod.rs  stream_api.rs
vyuber-rust/crates/vyuber-shared/: Cargo.toml
vyuber-rust/crates/vyuber-shared/src/: chat.rs  lib.rs  stream.rs
vyuber-rust/mediamtx/: vyuber-mediamtx.yml
vyuber-rust/scripts/: dev-watch.ps1  dev-watch.sh  dev.ps1  dev.sh
