[workspace]
members = [
    "crates/vyuber-backend",
    "crates/vyuber-frontend",
    "crates/vyuber-shared",
]
resolver = "2"

[workspace.dependencies]
# 共通依存関係
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
vyuber-shared = { path = "crates/vyuber-shared" }
